syntax = "proto3";

package blockchain;

import "google/protobuf/any.proto";

message Block {
    uint64 index = 1;
    google.protobuf.Any payload = 2;
    google.protobuf.Any metadata = 3;
}

message VerifiableBlock {
    Block block = 1;
}

message Event {
    Block block = 1;
}
