syntax = "proto3";

package skipchain;

message BlockMetaData {
    bytes signature = 2;
}
