syntax = "proto3";

package dkg;

import "onet/messages.proto";

message Init {
    repeated onet.Address addresses = 1;
}

message EncryptedDeal {
    bytes DHKey = 1;
    bytes Signature = 2;
    bytes Nonce = 3;
    bytes Cipher = 4;
}

message Deal {
    uint32 index = 1;
    EncryptedDeal deal = 2;
    bytes signature = 3;
}

message Ack {
    message Response {
        bytes sessionID = 1;
        uint32 index = 2;
        bool status = 3;
        bytes signature = 4;
    }

    uint32 index = 1;
    Response response = 2;
}

message Done {
    bytes publicKey = 1;
}
